[COS-1546] - Enhance tenant billing profile with more fields needed in Invoice PDF

--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
@@ -330,7 +330,8 @@
                       <span>Bank info</span>
                     </span>
                     <span class="invoice-printed-text096 TextsmRegular">
-                      <span>{{.InternationalPaymentsBankInfo}}</span>
+                      <div>{{.InternationalPaymentsBankName}}</div>
+                      <div>{{.InternationalPaymentsBankAddress}}</div>
                     </span>
                   </div>
                   <div class="invoice-printed-frame35981">
