[COS-1735] - Invoice flow fixes

--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
@@ -141,6 +141,7 @@
             </div>
             <div class="invoice-logo-container">
               {{if .ProviderLogoExtension}}
+              {{else}}
               <img alt="Company Logo" src="provider-logo{{.ProviderLogoExtension}}" class="invoice-company-logo" />
               {{end}}
             </div>
