FIx invoice email in PDF

--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
@@ -168,6 +168,9 @@
                                 <div class="invoice-text TextsmRegular line-height-14">
                                     {{.CustomerAddressLine3}}
                                 </div>
+                                <div class="invoice-text TextsmRegular line-height-14">
+                                    {{.CustomerEmail}}
+                                </div>
                             </div>
                         </div>
                         <div class="invoice-printed-from">
