[COS-1813] - Pdf invoice, address format

--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
@@ -169,6 +169,9 @@
                                     {{.CustomerAddressLine3}}
                                 </div>
                                 <div class="invoice-text TextsmRegular line-height-14">
+                                    {{.CustomerCountry}}
+                                </div>
+                                <div class="invoice-text TextsmRegular line-height-14">
                                     {{.CustomerEmail}}
                                 </div>
                             </div>
