Invoice PDF generation - improvements

--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
@@ -193,6 +193,12 @@
                                 <div class="invoice-text TextsmRegular line-height-14">
                                     {{.ProviderAddressLine3}}
                                 </div>
+                                <div class="invoice-text TextsmRegular line-height-14">
+                                    {{.ProviderCountry}}
+                                </div>
+                                <div class="invoice-text TextsmRegular line-height-14">
+                                    {{.ProviderEmail}}
+                                </div>
                             </div>
                         </div>
                     </div>
