--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
@@ -107,7 +107,6 @@
 </head>
 
 <body>
-<div>
     <div class="invoice-container">
         <div class="invoice-invoice-printed">
             <div class="invoice-invoice-full">
@@ -299,69 +298,73 @@
                     </div>
                 </div>
 
-                <div class="invoice-printed-frame44433" style="bottom: 0;">
-                    <div class="invoice-printed-frame3615">
-                        <div class="invoice-printed-dates1">
-                            <div class="invoice-payment-details-container">
-                                <div class="invoice-title-2 TextsmSemibold">
-                                    Domestic payments
-                                </div>
-                            </div>
-                            <div class="invoice-payment-details-header-container">
-                                <div class="TextsmRegular invoice-text">
-                                    {{safeHTML .DomesticPaymentsBankInfo}}
-                                </div>
-                            </div>
-                            &nbsp;
-                            <div class="invoice-payment-details-container">
-                                <div class="invoice-title-3 TextsmMedium">
-                                    Reference:
-                                </div>
-                                &nbsp;
-                                <div class="invoice-text-left TextsmRegular">
-                                    {{.InvoiceNumber}}
-                                </div>
-                            </div>
-                        </div>
-                        <div class="invoice-printed-dates2">
-                            <div class="invoice-payment-details-container">
-                                <div class="invoice-title-2 TextsmSemibold">
-                                    International payments
-                                </div>
-                            </div>
-                            <div class="invoice-payment-details-container">
-                                <div class="TextsmRegular invoice-text">
-                                    {{safeHTML .InternationalPaymentsBankInfo}}
-                                </div>
-                            </div>
-                            &nbsp;
-                            <div class="invoice-payment-details-container">
-                                <div class="invoice-title-3 TextsmMedium">
-                                    Reference:
-                                </div>
-                                &nbsp;
-                                <div class="invoice-text-left TextsmRegular">
-                                    {{.InvoiceNumber}}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="invoice-footer-container">
-                        <div class="invoice-customeros-logo-container">
-                            <img alt="CustomerOS" class="invoice-printed-customer-os" src="customer-os.png"/>
-                        </div>
-                        <div class="invoice-customeros-text TextxsRegular">
-                            Powered by CustomerOS - Revenue Intelligence for B2B hyperscalers
-                        </div>
-                        <div class="invoice-question-text">
-                            <a href="mailto:{{.ProviderEmail}}?subject=Questions about invoice {{.InvoiceNumber}}&body=Hi team, I have some questions about invoice {{.InvoiceNumber}}">Questions?</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
-</div>
+
+    <div class="invoice-printed-frame44433" style="bottom: 0;width: 780px; margin:auto;">
+        <div class="invoice-printed-frame3615">
+            <div class="invoice-printed-dates1">
+                <div class="invoice-payment-details-container">
+                    <div class="invoice-title-2 TextsmSemibold">
+                        Domestic payments
+                    </div>
+                </div>
+                <div class="invoice-payment-details-header-container">
+                    <div class="TextsmRegular invoice-text">
+                        {{safeHTML .DomesticPaymentsBankInfo}}
+                    </div>
+                </div>
+                &nbsp;
+                <div class="invoice-payment-details-container">
+                    <div class="invoice-title-3 TextsmMedium">
+                        Reference:
+                    </div>
+                    &nbsp;
+                    <div class="invoice-text-left TextsmRegular">
+                        {{.InvoiceNumber}}
+                    </div>
+                </div>
+            </div>
+
+            {{if .InternationalPaymentsBankInfo}}
+            <div class="invoice-printed-dates2">
+                <div class="invoice-payment-details-container">
+                    <div class="invoice-title-2 TextsmSemibold">
+                        International payments
+                    </div>
+                </div>
+                <div class="invoice-payment-details-container">
+                    <div class="TextsmRegular invoice-text">
+                        {{safeHTML .InternationalPaymentsBankInfo}}
+                    </div>
+                </div>
+                &nbsp;
+                <div class="invoice-payment-details-container">
+                    <div class="invoice-title-3 TextsmMedium">
+                        Reference:
+                    </div>
+                    &nbsp;
+                    <div class="invoice-text-left TextsmRegular">
+                        {{.InvoiceNumber}}
+                    </div>
+                </div>
+            </div>
+            {{else}}
+            {{end}}
+        </div>
+        <div class="invoice-footer-container">
+            <div class="invoice-customeros-logo-container">
+                <img alt="CustomerOS" class="invoice-printed-customer-os" src="customer-os.png"/>
+            </div>
+            <div class="invoice-customeros-text TextxsRegular">
+                Powered by CustomerOS - Revenue Intelligence for B2B hyperscalers
+            </div>
+            <div class="invoice-question-text">
+                <a href="mailto:{{.ProviderEmail}}?subject=Questions about invoice {{.InvoiceNumber}}&body=Hi team, I have some questions about invoice {{.InvoiceNumber}}">Questions?</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
