Invoice PDF generation - period

--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
@@ -228,8 +228,8 @@
                                         <div class="invoice-title-3 TextsmMedium">
                                             {{.Name}}
                                         </div>
-                                        <div class="invoice-printed-text028 TextsmRegular">
-                                            {{.Description}}
+                                        <div class="invoice-subtitle-3 TextsmRegular">
+                                            {{.InvoicePeriodStart}} - {{.InvoicePeriodEnd}}
                                         </div>
                                     </div>
                                     <div class="invoice-printed-frame44408">
