Hide bank details in invoice

--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
@@ -318,7 +318,7 @@
     </div>
 
     <div class="invoice-printed-frame44433" style="bottom: 0;width: 780px; margin:auto;">
-<!--        <div class="invoice-printed-frame3615">-->
+        <div class="invoice-printed-frame3615" style="height: 150px">
 <!--            <div class="invoice-printed-dates1">-->
 <!--                <div class="invoice-payment-details-container">-->
 <!--                    <div class="invoice-title-2 TextsmSemibold">-->
@@ -367,7 +367,7 @@
 <!--            </div>-->
 <!--            {{else}}-->
 <!--            {{end}}-->
-<!--        </div>-->
+        </div>
         <div class="invoice-footer-container">
             <div class="invoice-customeros-logo-container">
                 <img alt="CustomerOS" class="invoice-printed-customer-os" src="customer-os.png"/>
