--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
@@ -227,7 +227,7 @@
                             </div>
                         </div>
 
-                        <div style="display: flex; flex-grow: 1;padding-top: 8px;">
+                        <div style="display: flex; flex-grow: 1;padding-top: 8px;flex-direction: column;">
                             {{range .InvoiceLineItems}}
                                 <div style="display: flex; flex-grow: 1;">
                                     <div class="invoice-printed-column">
