Display SLI start date for one time charge in invoice

--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.html
@@ -235,7 +235,7 @@
                                             {{.Name}}
                                         </div>
                                         <div class="invoice-subtitle-3 TextsmRegular">
-                                            {{.InvoicePeriodStart}} - {{.InvoicePeriodEnd}}
+                                            {{.InvoiceLineSubtitle}}
                                         </div>
                                     </div>
                                     <div class="invoice-printed-frame44408">
