[COS-2575] - Invoice PDF - merge region and country on same row

--- a/packages/server/events-processing-platform-subscribers/subscriptions/invoice/pdf_template/index.html
+++ b/packages/server/events-processing-platform-subscribers/subscriptions/invoice/pdf_template/index.html
@@ -168,10 +168,7 @@
                                 {{.CustomerAddressLine3}}
                             </div>
                             <div class="invoice-text TextsmRegular line-height-14">
-                                {{.CustomerRegion}}
-                            </div>
-                            <div class="invoice-text TextsmRegular line-height-14">
-                                {{.CustomerCountry}}
+                                {{.CustomerAddressLine4}}
                             </div>
                             <div class="invoice-text TextsmRegular line-height-14">
                                 {{.CustomerEmail}}
@@ -196,10 +193,7 @@
                                 {{.ProviderAddressLine3}}
                             </div>
                             <div class="invoice-text TextsmRegular line-height-14">
-                                {{.ProviderRegion}}
-                            </div>
-                            <div class="invoice-text TextsmRegular line-height-14">
-                                {{.ProviderCountry}}
+                                {{.ProviderAddressLine4}}
                             </div>
                             <div class="invoice-text TextsmRegular line-height-14">
                                 {{.ProviderEmail}}
