--- a/packages/apps/frontera/index.html
+++ b/packages/apps/frontera/index.html
@@ -20,6 +20,28 @@
       heap.load("3563674186");
     }
   </script>
+  <script async>
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", "fryzkewrjw");
+  </script>
+  <script async>
+    window.intercomSettings = {
+      api_base: "https://api-iam.intercom.io",
+      app_id: "pqerb2dx",
+      alignment: "left",
+      horizontal_padding: 28,
+      vertical_padding: 28,
+      name: "${session?.user.name}",
+      email: "${session?.user.email}",
+      created_at: `${new Date().valueOf()}`
+    }
+  </script>
+  <script>
+      (function () { var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', w.intercomSettings); } else { var d = document; var i = function () { i.c(arguments); }; i.q = []; i.c = function (args) { i.q.push(args); }; w.Intercom = i; var l = function () { var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://widget.intercom.io/widget/pqerb2dx'; var x = d.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); }; if (document.readyState === 'complete') { l(); } else if (w.attachEvent) { w.attachEvent('onload', l); } else { w.addEventListener('load', l, false); } } })();
+  </script>
   <title>CustomerOS</title>
 </head>
 
